--- a/package.json
+++ b/package.json
@@ -4,20 +4,20 @@
     "description": "description of your plugin",
     "main": "index.js",
     "devDependencies": {
-      "common-readme": "^1.1.0"
+        "common-readme": "^1.1.0"
     },
     "scripts": {
-      "test": "echo \"Error: no test specified\" && exit 1",
-      "postinstall": "bash scripts/postinstall.bash"
+        "test": "echo \"Error: no test specified\" && exit 1",
+        "install-plugin": "bash scripts/install-plugin.bash"
     },
     "repository": {
-      "type": "git",
-      "url": "git+https://github.com/kbase/kbase-ui-plugin-user-profile.git"
+        "type": "git",
+        "url": "git+https://github.com/kbase/kbase-ui-plugin-user-profile.git"
     },
     "author": "KBase Developers",
     "license": "SEE LICENSE IN LICENSE.md",
     "bugs": {
-      "url": "https://github.com/kbase/kbase-ui-plugin-user-profile/issues"
+        "url": "https://github.com/kbase/kbase-ui-plugin-user-profile/issues"
     },
     "homepage": "https://github.com/kbase/kbase-ui-plugin-user-profile#readme"
-  }
+}
