--- a/react-app/package.json
+++ b/react-app/package.json
@@ -3,15 +3,15 @@
     "version": "0.1.0",
     "private": true,
     "dependencies": {
-        "@craco/craco": "5.2.3",
-        "@kbase/ui-lib": "0.1.0-alpha.39",
+        "@craco/craco": "5.2.4",
+        "@kbase/ui-lib": "0.1.0-alpha.49",
         "@types/enzyme": "3.10.2",
         "@types/enzyme-adapter-react-16": "1.0.5",
         "@types/jest": "24.0.15",
         "@types/node": "12.6.2",
         "@types/react": "16.8.23",
         "@types/react-dom": "16.8.4",
-        "@types/react-redux": "^7.1.0",
+        "@types/react-redux": "7.1.1",
         "antd": "3.20.1",
         "craco-antd": "1.11.0",
         "enzyme": "3.10.0",
