changes to integrate with ui - use params from ui - use auth from ui - set title in ui - remove console logs - set paths to take over for user profile (#people, #user)

--- a/plugin/config.yml
+++ b/plugin/config.yml
@@ -7,8 +7,10 @@ package:
   type: iframe
 install:
   routes:
-    - path: [["people2", "user2"], {type: 'rest', name: 'pathParams'}]
-      queryParams: {}
+    - path: [["people", "user"], {type: 'param', name: 'username', required: false}]
+      captureExtraPath: true
+      # queryParams: 
+      #   username: {}
       widget: kb_iframe_loader
       authorization: true 
       params:
