figured out profile update API

--- a/react-app/package.json
+++ b/react-app/package.json
@@ -63,5 +63,8 @@
             "!src/serviceWorker.ts"
         ]
     },
+    "resolutions": {
+        "**/less-loader": "5.0.0"
+    },
     "homepage": "./"
 }
