--- a/react-app/package.json
+++ b/react-app/package.json
@@ -3,16 +3,16 @@
     "version": "0.1.0",
     "private": true,
     "dependencies": {
-        "@craco/craco": "5.3.0",
-        "@kbase/ui-lib": "0.1.0-alpha.50",
-        "@types/enzyme": "3.10.3",
+        "@craco/craco": "5.2.4",
+        "@kbase/ui-lib": "0.1.0-alpha.58",
+        "@types/enzyme": "3.10.2",
         "@types/enzyme-adapter-react-16": "1.0.5",
-        "@types/jest": "24.0.18",
+        "@types/jest": "24.0.15",
         "@types/node": "12.7.2",
         "@types/react": "16.9.2",
         "@types/react-dom": "16.9.0",
         "@types/react-redux": "7.1.2",
-        "antd": "3.22.1",
+        "antd": "3.20.2",
         "craco-antd": "1.11.0",
         "enzyme": "3.10.0",
         "enzyme-adapter-react-16": "1.14.0",
@@ -25,7 +25,7 @@
         "typescript": "3.5.3"
     },
     "scripts": {
-        "start": "nodemon -w ./craco.config.js -w ./src/custom/style/antd/theme.less --exec 'craco start'",
+        "start": "nodemon -w ./craco.config.js -w ./node_modules/@kbase/ui-lib/lib/custom/antd/theme.less --exec ‘craco start’",
         "build": "craco build",
         "test": "react-scripts test",
         "eject": "react-scripts eject",
@@ -50,7 +50,7 @@
     "proxy": "https://ci.kbase.us",
     "devDependencies": {
         "nodemon": "^1.19.1",
-        "typedoc": "0.15.0"
+        "typedoc": "^0.14.2"
     },
     "jest": {
         "collectCoverageFrom": [
@@ -62,6 +62,9 @@
             "!src/index.tsx",
             "!src/serviceWorker.ts"
         ]
+    },
+    "resolutions": {
+        "**/less-loader": "5.0.0"
     },
     "homepage": "./"
 }
