--- a/react-app/package.json
+++ b/react-app/package.json
@@ -3,29 +3,29 @@
     "version": "0.1.0",
     "private": true,
     "dependencies": {
-        "@craco/craco": "5.2.4",
+        "@craco/craco": "5.5.0",
         "@kbase/ui-lib": "0.1.0-alpha.58",
-        "@types/enzyme": "3.10.2",
+        "@types/enzyme": "3.10.3",
         "@types/enzyme-adapter-react-16": "1.0.5",
-        "@types/jest": "24.0.15",
-        "@types/node": "12.7.2",
+        "@types/jest": "24.0.18",
+        "@types/node": "12.7.5",
         "@types/react": "16.9.2",
         "@types/react-dom": "16.9.0",
         "@types/react-redux": "7.1.2",
-        "antd": "3.20.2",
-        "craco-antd": "1.11.0",
+        "antd": "3.23.3",
+        "craco-antd": "1.12.0",
         "enzyme": "3.10.0",
         "enzyme-adapter-react-16": "1.14.0",
         "react": "16.9.0",
         "react-dom": "16.9.0",
         "react-redux": "7.1.1",
-        "react-scripts": "3.1.1",
+        "react-scripts": "3.1.2",
         "react-test-renderer": "16.9.0",
         "redux": "4.0.4",
-        "typescript": "3.5.3"
+        "typescript": "3.6.3"
     },
     "scripts": {
-        "start": "nodemon -w ./craco.config.js -w ./node_modules/@kbase/ui-lib/lib/custom/antd/theme.less --exec ‘craco start’",
+        "start": "nodemon -w ./craco.config.js -w ./node_modules/@kbase/ui-lib/lib/custom/antd/theme.less --exec \"craco start\"",
         "build": "craco build",
         "test": "react-scripts test",
         "eject": "react-scripts eject",
@@ -49,8 +49,8 @@
     },
     "proxy": "https://ci.kbase.us",
     "devDependencies": {
-        "nodemon": "^1.19.1",
-        "typedoc": "^0.14.2"
+        "nodemon": "^1.19.2",
+        "typedoc": "^0.15.0"
     },
     "jest": {
         "collectCoverageFrom": [
