--- a/react-app/package.json
+++ b/react-app/package.json
@@ -4,7 +4,8 @@
     "private": true,
     "dependencies": {
         "@craco/craco": "5.5.0",
-        "@kbase/ui-lib": "0.1.0-alpha.58",
+        "@kbase/ui-lib": "0.2.0-alpha.5",
+        "@kbase/ui-components": "0.2.1-alpha.0",
         "@types/enzyme": "3.10.3",
         "@types/enzyme-adapter-react-16": "1.0.5",
         "@types/jest": "24.0.18",
