--- a/react-app/package.json
+++ b/react-app/package.json
@@ -4,23 +4,23 @@
     "private": true,
     "dependencies": {
         "@craco/craco": "5.5.0",
-        "@kbase/ui-lib": "0.2.0-alpha.5",
         "@kbase/ui-components": "0.2.1-alpha.6",
-        "@types/enzyme": "3.10.3",
-        "@types/enzyme-adapter-react-16": "1.0.5",
-        "@types/jest": "24.0.18",
-        "@types/node": "12.7.12",
-        "@types/react": "16.9.5",
-        "@types/react-dom": "16.9.1",
-        "@types/react-redux": "7.1.4",
+        "@kbase/ui-lib": "0.2.0-alpha.5",
+        "@types/enzyme": "*",
+        "@types/enzyme-adapter-react-16": "*",
+        "@types/jest": "*",
+        "@types/node": "*",
+        "@types/react": "*",
+        "@types/react-dom": "*",
+        "@types/react-redux": "*",
         "antd": "3.23.6",
         "craco-antd": "1.14.1",
         "enzyme": "3.10.0",
         "enzyme-adapter-react-16": "1.15.1",
-        "react": "16.10.2",
-        "react-dom": "16.10.2",
+        "react": "16.12.0",
+        "react-dom": "16.12.0",
         "react-redux": "7.1.1",
-        "react-scripts": "3.2.0",
+        "react-scripts": "3.3.0",
         "react-test-renderer": "16.10.2",
         "redux": "4.0.4",
         "typescript": "3.6.4"
@@ -50,7 +50,7 @@
     },
     "proxy": "https://kbase.us",
     "devDependencies": {
-        "nodemon": "^1.19.3",
+        "nodemon": "^2.0.2",
         "typedoc": "^0.15.0"
     },
     "jest": {
