--- a/package.json
+++ b/package.json
@@ -4,11 +4,14 @@
     "description": "react profileview",
     "main": "index.js",
     "devDependencies": {
-        "common-readme": "^1.1.0"
+        "common-readme": "1.1.0",
+        "bluebird": "3.7.2",
+        "tar": "5.0.5",
+        "fs-extra": "8.1.0"
     },
     "scripts": {
-        "test": "echo \"Error: no test specified\" && exit 1",
-        "build-plugin": "bash scripts/build-plugin.bash"
+        "build-plugin": "bash scripts/build-plugin.bash",
+        "install-plugin": "node scripts/install-plugin.js"
     },
     "repository": {
         "type": "git",
