--- a/plugin/test/profile-view-auth.yaml
+++ b/plugin/test/profile-view-auth.yaml
@@ -1,20 +1,20 @@
 ---
-description: Accessing profile view witho authentication
+description: Accessing profile view without authentication
 specs:
-- description: profile view should appear when the route is navigated to
-  tasks:
-  - subtask: login
-  - action: navigate
-    path: people
-  - wait: forElement 
-    timeout: 10000
-    selector:
-      - type: iframe
-        value: plugin-iframe
-  - action: switchToFrame
-  - wait: forElement
-    timeout: 10000
-    selector:
-      - type: raw
-        name: class
-        value: profile-tabs
+  - description: profile view should appear when the route is navigated to
+    tasks:
+      - subtask: login
+      - action: navigate
+        path: people
+      - wait: forElement
+        timeout: 10000
+        selector:
+          - type: iframe
+            value: plugin-iframe
+      - action: switchToFrame
+      - wait: forElement
+        timeout: 10000
+        selector:
+          - type: raw
+            name: class
+            value: profile-tabs
