many changes to address field display, validation, styling distinct view/edit mode - edit enabled by a profile owner clicking a button which only appears for the profile owner still wip, but works well enough to evaluate the view/edit mode

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,5 +4,6 @@
     "prettier.printWidth": 120,
     "prettier.singleQuote": true,
     "prettier.tabWidth": 4,
-    "editor.detectIndentation": false
+    "editor.detectIndentation": false,
+    "editor.formatOnSave": true
 }
