--- a/plugin/config.yml
+++ b/plugin/config.yml
@@ -2,17 +2,14 @@
 ---
 package:
   author: KBase Developer
-  name: User UI Profile View
+  name: react-profile-view
   description: KBase user profile view plugin built with React.
   type: iframe
 install:
   routes:
-    - path: [["people", "user"], {type: 'param', name: 'username', required: false}]
+    - path: [[people, user], {type: param, name: username, required: false}]
       captureExtraPath: true
-      # queryParams: 
-      #   username: {}
       widget: kb_iframe_loader
-      authorization: true 
+      authorization: true
       params:
         view: user-profile
-        plugin: react-profile-view
