--- a/react-app/package.json
+++ b/react-app/package.json
@@ -3,8 +3,9 @@
     "version": "0.3.1",
     "private": true,
     "dependencies": {
-        "@craco/craco": "5.6.3",
-        "@kbase/ui-components": "0.2.1-alpha.14",
+        "@craco/craco": "5.6.4",
+        "@kbase/ui-components": "0.2.1-alpha.15",
+        "@kbase/ui-lib": "0.2.1-alpha.3",
         "@types/enzyme": "*",
         "@types/enzyme-adapter-react-16": "*",
         "@types/jest": "*",
@@ -12,17 +13,17 @@
         "@types/react": "*",
         "@types/react-dom": "*",
         "@types/react-redux": "*",
-        "antd": "3.26.11",
+        "antd": "3.26.14",
         "craco-antd": "1.14.1",
         "enzyme": "3.11.0",
         "enzyme-adapter-react-16": "1.15.2",
-        "react": "16.12.0",
-        "react-dom": "16.12.0",
+        "react": "16.13.1",
+        "react-dom": "16.13.1",
         "react-redux": "7.2.0",
-        "react-scripts": "3.2.0",
-        "react-test-renderer": "16.12.0",
+        "react-scripts": "3.4.1",
+        "react-test-renderer": "16.13.1",
         "redux": "4.0.5",
-        "typescript": "3.8.2"
+        "typescript": "3.8.3"
     },
     "scripts": {
         "start": "nodemon -w ./craco.config.js -w ./node_modules/@kbase/ui-lib/lib/custom/antd/theme.less --exec \"craco start\"",
@@ -46,10 +47,10 @@
             "last 1 safari version"
         ]
     },
-    "proxy": "https://narrative-dev.kbase.us",
+    "proxy": "https://ci.kbase.us",
     "devDependencies": {
         "nodemon": "2.0.2",
-        "typedoc": "^0.15.0"
+        "typedoc": "^0.17.3"
     },
     "jest": {
         "collectCoverageFrom": [
