--- a/react-app/package.json
+++ b/react-app/package.json
@@ -3,36 +3,40 @@
     "version": "0.3.1",
     "private": true,
     "dependencies": {
-        "@craco/craco": "5.6.4",
-        "@kbase/ui-components": "0.2.1-alpha.16",
+        "@ant-design/icons": "4.2.1",
+        "@kbase/ui-components": "0.2.1-alpha.21",
         "@kbase/ui-lib": "0.2.1-alpha.3",
         "@types/enzyme": "*",
         "@types/enzyme-adapter-react-16": "*",
         "@types/jest": "*",
+        "@types/marked": "*",
         "@types/node": "*",
         "@types/react": "*",
         "@types/react-dom": "*",
         "@types/react-redux": "*",
-        "@types/marked": "*",
-        "antd": "3.26.14",
-        "craco-antd": "1.14.1",
+        "antd": "4.3.3",
+        "babel-plugin-import": "1.13.0",
+        "customize-cra": "1.0.0",
         "enzyme": "3.11.0",
         "enzyme-adapter-react-16": "1.15.2",
+        "less": "3.11.3",
+        "less-loader": "6.1.2",
+        "marked": "1.1.0",
         "react": "16.13.1",
         "react-dom": "16.13.1",
         "react-redux": "7.2.0",
         "react-scripts": "3.4.1",
         "react-test-renderer": "16.13.1",
+        "react-app-rewired": "2.1.6",
         "redux": "4.0.5",
-        "typescript": "3.8.3",
-        "marked": "0.8.2"
+        "typescript": "3.9.5"
     },
     "scripts": {
-        "start": "nodemon -w ./craco.config.js -w ./node_modules/@kbase/ui-lib/lib/custom/antd/theme.less --exec \"craco start\"",
-        "build": "craco build",
-        "test": "react-scripts test",
-        "eject": "react-scripts eject",
-        "typedoc": "typedoc --exclude \"**/*.test.*\" --out spec src"
+        "start": "nodemon -w ./config-overrides.js --exec 'react-app-rewired start'",
+        "build": "react-app-rewired build",
+        "test": "react-app-rewired test --env=jest-environment-jsdom-sixteen",
+        "test-with-coverage": "react-app-rewired test --coverage --watchAll=false  --env=jest-environment-jsdom-sixteen",
+        "test2": "react-scripts test"
     },
     "eslintConfig": {
         "extends": "react-app"
@@ -51,8 +55,12 @@
     },
     "proxy": "https://ci.kbase.us",
     "devDependencies": {
-        "nodemon": "2.0.2",
-        "typedoc": "^0.17.3"
+        "@testing-library/dom": "7.17.0",
+        "@testing-library/jest-dom": "5.10.1",
+        "@testing-library/react": "10.4.0",
+        "@testing-library/user-event": "12.0.7",
+        "nodemon": "2.0.4",
+        "typedoc": "0.17.7"
     },
     "jest": {
         "collectCoverageFrom": [
@@ -64,9 +72,6 @@
             "!src/index.tsx",
             "!src/serviceWorker.ts"
         ]
-    },
-    "resolutions": {
-        "**/less-loader": "5.0.0"
     },
     "homepage": "./"
 }
