fix integration test

--- a/plugin/test/profile-view-auth.yaml
+++ b/plugin/test/profile-view-auth.yaml
@@ -12,9 +12,9 @@ specs:
           - type: iframe
             value: plugin-iframe
       - action: switchToFrame
-      - wait: forElement
+      - wait: forText
         timeout: 10000
+        text: "{{config.auth.username}}"
         selector:
-          - type: raw
-            name: class
-            value: profile-tabs
+          - type: element
+            value: username
