--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
         "eslint": "6.8.0"
     },
     "scripts": {
-        "build-plugin": "bash scripts/build-plugin.bash",
+        "build": "bash scripts/build-plugin.bash",
         "install-plugin": "node scripts/install-plugin.js"
     },
     "repository": {
