--- a/vite-app/package.json
+++ b/vite-app/package.json
@@ -3,6 +3,9 @@
     "private": true,
     "version": "0.0.0",
     "type": "module",
+    "engines": {
+        "node": "18"
+    },
     "scripts": {
         "dev": "vite",
         "build": "tsc && vite build",
@@ -18,7 +21,7 @@
         "@types/react": "18.2.14",
         "@types/react-dom": "18.2.6",
         "antd": "5.6.3",
-        "dompurify": "3.0.3",
+        "dompurify": "3.0.4",
         "react": "18.2.0",
         "react-dom": "18.2.0",
         "redux": "4.2.1",
@@ -32,7 +35,7 @@
         "eslint": "8.43.0",
         "eslint-plugin-react-hooks": "4.6.0",
         "eslint-plugin-react-refresh": "0.4.1",
-        "typescript": "5.1.3",
+        "typescript": "5.1.6",
         "vite": "4.3.9"
     }
 }
