switch to Taskfile [CE-255]

--- a/.github/workflows/build-dist.yml
+++ b/.github/workflows/build-dist.yml
@@ -23,4 +23,4 @@ jobs:
       # Build the plugin
       #
       - name: Build the plugin dist
-        run: make build
+        run: ./Taskfile build
